--- a/informed-consumer-app/src/components/Product/Product.css
+++ b/informed-consumer-app/src/components/Product/Product.css
@@ -1,17 +1,22 @@
 .productCard {
     display: flex;
-    padding: 4px;
-    margin-top: 10px;
-    background-color: var(--main-color-opaque);
     color: whitesmoke;
     font-weight: normal;
+    padding: 20px;
+
 }
 
-.productCard img{
-    padding-right: 20px;
+.productCard>img{
+    width: 50%;
+    padding-right: 30px;
 }
 
 .productTitle {
     size: 11;
     font-weight: 600;
+}
+
+.product {
+    width: 100%;
+    background-color: var(--main-color-opaque);
 }
