--- a/informed-consumer-app/src/components/Layout/Layout.css
+++ b/informed-consumer-app/src/components/Layout/Layout.css
@@ -6,6 +6,11 @@
 .navItems {
     display: flex;
     align-items: center;
+    font-weight: 100;
+}
+
+.nav-item:hover {
+    font-weight: 400;
 }
 
 .navStart {
