--- a/informed-consumer-app/src/components/Input/Input.css
+++ b/informed-consumer-app/src/components/Input/Input.css
@@ -39,7 +39,7 @@
     background-color: white;
 }
 
-.searchPreviewItems>div
+.searchPreviewItems>button
 {
     width: 100%;
     padding: 10px 20px;
@@ -51,9 +51,10 @@
     text-align: left;
 }
 
-.searchPreviewItems> div:hover, .searchPreviewItems> div.active {
+.searchPreviewItems> button:hover, .searchPreviewItems> button.active {
     background-color:  var(--main-color);
     color: white;
+    outline: none;
 }
 
 .noResult{
