--- a/informed-consumer-app/src/components/Product/Product.css
+++ b/informed-consumer-app/src/components/Product/Product.css
@@ -20,3 +20,8 @@
     width: 100%;
     background-color: var(--main-color-opaque);
 }
+
+.productDNE {
+    padding: 50px;
+    font-size: 50px;
+}
