--- a/informed-consumer-app/src/components/Form/Form.css
+++ b/informed-consumer-app/src/components/Form/Form.css
@@ -11,7 +11,8 @@
 
 .searchItems>button {
     width: 100%;
-    padding: 10px 20px;
+    padding: 10px 10px;
+    margin-left: 10px;
     border-style: solid;
     border-color:  var(--main-color);
     border-width: 0px 0px 1px 0px;
@@ -25,4 +26,9 @@
     background-color:  var(--main-color);
     color: white;
     outline: none;
+}
+
+.divider {
+    height: 1px;
+    background-color: var(--main-color);
 }
